--- a/react/package.json
+++ b/react/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "CHANGE_ME",
+  "name": "bullets-diagramation",
   "version": "0.0.0",
   "scripts": {
     "test": "vtex-test-tools test"
@@ -20,6 +20,9 @@
     "@vtex/tsconfig": "^0.4.4",
     "apollo-cache-inmemory": "^1.6.5",
     "graphql": "^14.6.0",
-    "typescript": "^3.9.6"
+    "itgloberspartnercl.bullets-diagramation": "https://fernandopachon--itgloberspartnercl.myvtex.com/_v/private/typings/linked/v1/itgloberspartnercl.bullets-diagramation@0.0.1+build1669065035/public/@types/itgloberspartnercl.bullets-diagramation",
+    "prop-types": "^15.8.1",
+    "typescript": "3.9.7",
+    "vtex.render-runtime": "http://vtex.vtexassets.com/_v/public/typings/v1/vtex.render-runtime@8.132.4/public/@types/vtex.render-runtime"
   }
 }
